# UniversalConverter

./: BigInteger.cpp  BigInteger.h  CMakeLists.txt  FileManager.cpp  Fraction.cpp  Fractiron.h  README.md  Singleton.h  TextBox.cpp  TextBox.h  main.cpp
app/: Button.h  FileManager.h  Screen.h
src/: FileManager.cpp  TextBox.cpp
